data/derived/sp14/progs/unify/prog2609.ml.out
Characters 104-105:
  (x (sum / 10) :: (sum mod 10) :: a)
   ^
Error: This expression has type int * int
       This is not a function; it cannot be applied.
